# adventofcode

./: .gitignore  README.md  find_solved.py  pyproject.toml  setup.py
cpp/: common.h
cpp/2020/day1/: day1  day1.cpp
cpp/2020/day2/: day2  day2.cpp
cpp/2020/day3/: day3  day3.cpp
cpp/2020/day4/: day4  day4.cpp
cpp/2020/day5/: day5  day5.cpp
cpp/2021/day1/: day1  day1.cpp
cpp/2021/day10/: day10  day10.cpp
cpp/2021/day11/: day11  day11.cpp
cpp/2021/day12/: day12  day12.cpp
cpp/2021/day2/: day2  day2.cpp
cpp/2021/day3/: day3  day3.cpp
cpp/2021/day4/: day4  day4.cpp  day4.in
cpp/2021/day5/: day5  day5.cpp  day5_boof.cpp
cpp/2021/day6/: day6  day6.cpp
cpp/2021/day7/: day7  day7.cpp
cpp/2021/day8/: day8  day8.cpp
cpp/2021/day9/: day9  day9.cpp
csharp/2021/day1/: day1.cs
csharp/2021/day12/: day12.cs
csharp/2021/day2/: day2.cs
csharp/2021/day3/: day3.cs
csharp/2021/day4/: day4.cs
csharp/2021/day5/: day5.cs
java/2015/day1/: day1.java
java/2020/day2/: day2.java
java/2020/day3/: day3.java
java/2020/day4/: day4.java
java/2020/day5/: day5.java
java/2020/day6/: day6.java
java/2020/day7/: day7.java
java/2020/day8/: day8.java
python/2015/day1/: day1.py
python/2015/day2/: day2.py
python/2015/day3/: day3.py
python/2015/day4/: day4.py
python/2015/day5/: day5.py
python/2015/day6/: day6.py
python/2015/day7/: day7.py
python/2015/day8/: day8.py
python/2017/day1/: day1.py
python/2018/day1/: day1.py
python/2018/day2/: day2.py
python/2019/day1/: day1.py
python/2019/day2/: day2.py
python/2019/day3/: day3.py
(+15 files in other folders)
